# Zoner_project_full

main/: CMakeLists.txt  main.c  main.c.bak  uart_pio.pio
main/DFPlayerMini/: CMakeLists.txt  df.c  df.h
main/KBD/: CMakeLists.txt  kbd.c  kbd.h
main/Zoner/: CMakeLists.txt  zoner.c  zoner.h
main/led_lib/: CMakeLists.txt  led.c  led.h
main/scan_kbd/: CMakeLists.txt  scan_kbd.c  scan_kbd.h
